force-app/main/default/objects/AssistantCallback__e/AssistantCallback__e.object-meta.xml
<CustomObject>
    <label>Assistant Callback</label>
    <pluralLabel>Assistant Callbacks</pluralLabel>
</CustomObject>