force-app/main/default/objects/AssistantCallback__e/fields/RunId__c.field-meta.xml
<CustomField>
    <fullName>RunId__c</fullName>
    <label>Run Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>