force-app/main/default/objects/AssistantCallback__e/fields/ThreadId__c.field-meta.xml
<CustomField>
    <fullName>ThreadId__c</fullName>
    <label>Thread Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>